chanapi-macros/tests/ui/fail_where_clause.stderr
error: chanapi::service: where-clauses on the trait are not supported
 --> tests/ui/fail_where_clause.rs:3:1
  |
3 | where
  | ^^^^^
